# virtualSetmaker

./: .gitattributes  .gitignore  LICENSE  README.md  pyproject.toml
examples/: example_scene.json
packaging/: build_windows.bat  launch_vsm_gui.py  vsm-gui.spec
samples/: Camera_move_curve.hcw  Camera_move_only.hcw  Sceneforclaude.hcw  one_with_table.hcw
src/virtualsetmaker/: __init__.py  build.py  cli.py  coords.py  gui.py  ir.py  settings.py
src/virtualsetmaker/emit/: __init__.py  blockouts.py  unreal_python.py
src/virtualsetmaker/geo/: __init__.py  materials.py  mesh.py  obj_writer.py  primitives.py  props.py
src/virtualsetmaker/parse/: __init__.py  probe.py  shotdesigner.py
tests/: test_blockouts.py  test_build.py  test_camera_moves.py  test_cli.py  test_coords.py  test_emit.py  test_geo.py  test_ir.py  test_light_fixtures.py  test_obj_writer.py  test_parse.py  test_prop_meshes.py  test_prop_models.py  test_prop_placement.py  test_prop_scale.py  test_runtime_stub.py  test_settings.py  test_wall_inserts.py
